src/App.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');

*   {
    margin: 0;
    padding: 0;
    scroll-behavior: smooth;
}


svg {
    display: inline-block;
}
.App    {
    width: 100vw;
    min-height: 100vh;
}

body, html {
    height: 100%;
    width: 100%;
    margin: 0;
}

a{text-decoration: none;}


#navbar {
    height: 64px;
    position: fixed;
    display: flex;
    width: 100%;
    top: 0;
    left: 0;
    background-color: rgb(15, 56, 65) ;
    z-index: 1;
}

.page_nav   {
    text-decoration: none;
    margin-top: auto;
    margin-bottom: auto;
    margin-left: auto;
    padding-right: 20px;
    padding-left: 20px;
    padding-bottom: 5px;
    font-size: 26px;
    font-family: 'Roboto', sans-serif;
    color: whitesmoke;
}

#logo   {
    margin-top: auto;
    margin-bottom: auto;
    margin-right: auto;
    padding-left: 20px;
    font-size: 32px;
    letter-spacing: 2px;
    font-family: 'Roboto', sans-serif;
    color: whitesmoke;
    
}

.page_nav:hover{
    border-bottom: 1px inset gainsboro;
    color: gainsboro;
}


#page_nav_list  {
    margin-left: auto;
    margin-top: auto;
    margin-bottom:auto;
}

.page_section   {
    height: 100%;
    text-align: center;
    margin: auto;
    align-items: center;
}

.section_wrapper    {
    margin: auto;
    height: inherit;
    padding-top: 64px;
}



#welcome-section    {
    background-color: #264653;
    background-size: cover;
    height: 100vh;
    width: 100vw;
}


#welcome-tag    {
    padding: 10px;
    background-color: rgba(0, 0, 0, 0.4);
    font-weight: bold;
    line-height: 64px;
    color: gainsboro;
    text-align: left;
    width: 40%;
    margin: auto;
    position: relative;
    top: 30vh;
}





/* About Page */
.about_me_body  {
    margin: auto;
    padding: 5vw;
    text-align: left;
    color: white;
    background-color: #264653;
}

#about_me_head    {
    font-family:Verdana, Geneva, Tahoma, sans-serif;
    letter-spacing: .1rem;
    text-align: center;
    margin-bottom: .5rem;
}

#about_me_head h1   {
    font-weight: bold;
}

.about_me_text  {
    text-align: left;
    text-indent: 3rem;
    padding: 1.25rem;
    font-family:Verdana, Geneva, Tahoma, sans-serif;
    line-height: 22px;
}

.about_me_text a {
    font-family:Verdana, Geneva, Tahoma, sans-serif;
    color: #f4a261;
    text-decoration: underline;
    font-weight: bold;
}

.about_me_footer   {
    top: auto;
    bottom: 5vh;
    margin-left: auto;
    margin-right: auto;
    width: 100%;
}
#devIcons_span  {
    font-size: 64px;
    margin-left: 10vw;
    margin-right: 10vw;
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    padding: .5rem;
}

/* Contact Page Styling */



.contact_body   {
    margin: auto;
    padding: 5vw;
    text-align: left;
    color: white;
    background-color: #264653;
    
}

#contact_head   {
    font-family:Verdana, Geneva, Tahoma, sans-serif;
    letter-spacing: .1rem;
    text-align: center;
    justify-content: center;
    margin-bottom: .5rem;
}

#social_links_span {
    margin: auto;
    width: 30%;
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    padding: .5rem;
}

#social_links_span a  {
    color: white;
    font-size: 22px;
}

.contact-form   {
    background-color:rgb(15, 56, 65);
    display: flex;
    height: 100%;
    width: 400px;
    flex-direction: column;
    text-align: left;
    border-radius: 1.25rem;
    box-shadow: 2px 2px 25px  rgba(0, 0, 0, 0.6);
    padding: 10px;
    margin: auto;
    margin-top: 1.5rem;
    margin-bottom: 10vh;
}


.contact-form button {
    width: 60%;
    margin: auto;
    margin-top: 12px;
    padding: 7px;
    background-color: #f4a261;
}

.contact-form button:hover  {
    background-color: #e76f51;
    color: gainsboro;
    cursor: pointer;
}

.contact-form label{
    font-weight: bold;
    font-size: 18px;
    letter-spacing: 1px;
    margin-bottom: 7px;
    margin-top: 7px;
    color: #f4a261;
}

.contact-form input, textarea{
    font-size: 16px;
    background-color: rgba(72, 68, 68, 0.6);
    color: white;
}

.contact-form input{
    height: 20px;
    padding: 2px;
}

.contact-form textarea{
    height: 40px;
    max-width: 100%;
}


/* Projects Page */
.projects_body  {

    text-align: center;
    background-color:#264653;
    font-family:Verdana, Geneva, Tahoma, sans-serif;
    letter-spacing: .1rem;
    text-align: center;
    color: white;
}

.projects_body h1   {
    font-family:Verdana, Geneva, Tahoma, sans-serif;
    padding: 5vw;
}
#projects-grid  {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    grid-gap: 3rem;
    margin: auto;
    width: 100%;
    padding: 10px;
}


/* Project Card Styling */

.project_card   {
    border-radius: 1.25rem;
    box-shadow: 2px 2px 25px  rgba(0, 0, 0, 0.6);
    overflow: hidden;
    width: 300px;
    height: 300px;
    display: grid;
    grid-template-rows: 1fr 1fr;
}

.project_image {
    background-size: cover;
    height: 100%;
}

.card_data   {
    width: 100%;
    display: flex;
    flex-direction: column;
    text-align: left;
    align-items: center;
    box-sizing: border-box;
    background-color:rgb(15, 56, 65);
    color: white;
}

.card_title {
    margin: auto;
    letter-spacing: 0.5px;
    font-family:Verdana, Geneva, Tahoma, sans-serif;
    color: #f4a261;
}

.card_details   {
    width: 100%;
    text-indent: 10px;
    font-size: 16px;
    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    padding: 12px;
}

.card_links {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-gap: .2rem;
    justify-content: center;
    width: 100%;
    margin: .3rem;
}


.cardLink {
    background-color: #f4a261;
    font-style: inset;
    font-weight: 600;
    color: rgba(0, 0, 0, 0.6);
    border: 1px solid black;
    border-radius: .5rem;
    text-align: center;
    padding: 2px;
}

.card_links a:hover{
    color: gainsboro;
    background-color: #e76f51;
}

/*Form Response Splash Page Styling*/

.form_response  {
   width: 100vw;
   height: 100vh;
   padding: auto;
   display: flex;
   align-items: center;
   background-color: rgb(136, 197, 210);
}

.form_res_wrapper   {
    border: 2px solid black;
    border-radius: .5rem;
    box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.4);
    background-color: rgba(255, 255, 255, 0.6);
    margin: auto;
    width: 30vw;
    text-align: center;
}

.form_res_header{
    text-align: center;
    padding: 10px;
}

.form_res_header p{
    font-size: 16px;
    font-weight: 6000;
}

.form_res_message   {
    width: 90%;
    margin: auto;
    font-size: 16px;
    padding-top: 5vh;
    padding-bottom: 5vh;
}

.form_res_links {
    border-top: .5px solid black;
    margin: auto;
    width: 80%;
    margin-top: 15px;
    padding-top: 15px;
    display: flex;
    justify-content: space-evenly;
    justify-items: center;
}

.form_res_links a   {
    color: black;
    font-size: 32px;
}

.form_res_header h1    {
    letter-spacing: 1px;
}

.form_res_header span{
    font-size: 16px;
    letter-spacing: unset;
    font-family:Arial, Helvetica, sans-serif;
}





@media screen and (max-width: 600px)    {
    .page_nav, #logo {
        font-size: 16px;
    }

    #navbar {
        height: 32px;
    }
    
   
    .section_wrapper{
        padding-top: 32px;
        height: 100%;
    }
    

    h1 {
        font-size: 28px;
    }

    .form_res_wrapper   {
        width: 200px;
    }

    .contact-form   {
        width: 80vw;
    }

    #devIcons_span  {
        font-size: 48px;
        justify-items: center;
        justify-content: space-evenly;
    }

    #projects-grid  {
        display: flex;
        flex-wrap: wrap;
        grid-gap: 5px;
    }

}

